Fix: todos now expand/collapse correctly
Before, to expand/collapse a todo, you need to click below the last
paragraph element or in the li itself. If clicking to the right of the
buttons, it will detect a div that contains the form buttons and that
prevented to access the data needed to this behavior.

The solution now checks if the element clicked is the li and if not, it
gets the li using a recursive function.

--- a/src/style.css
+++ b/src/style.css
@@ -153,6 +153,10 @@ input[type='text']:valid {
   transition: 0.3s;
 }
 
+.content > div {
+  padding: 1%;
+}
+
 .todo-list {
   display: flex;
   flex-direction: column;
@@ -160,10 +164,9 @@ input[type='text']:valid {
   padding-left: 0;
 }
 
-.todo-list > li {
+.todo-li {
   border: 3px solid #000000;
   border-radius: 10px;
-  margin: 0 1%;
   padding: 1rem;
 }
 
